syntax = "proto3";
package gwc.gateway.v1;

option go_package = "gwc/x/gateway/types";

// gogoprotoをインポート
import "gogoproto/gogo.proto";

// GatewayPacketData defines the packet data for the gateway module
message GatewayPacketData {
  oneof packet {
    NoDataPacket   no_data_packet   = 1;
    FragmentPacket fragment_packet  = 2;
    ManifestPacket manifest_packet  = 3;
  }
}

message NoDataPacket {}

// FragmentPacket defines a single fragment of file data
message FragmentPacket {
  string session_id = 1;
  // RootProof for verification reference
  string root_proof = 2;
  // identifies the fragment position
  string path = 3;
  uint64 index = 4;
  bytes data = 5;
}

// PacketFragmentMapping defines the location of a fragment
message PacketFragmentMapping {
  string fdsc_id     = 1;
  string fragment_id = 2;
}

// FileMetadata defines metadata for a single file within the project
message FileMetadata {
  string mime_type = 1;
  uint64 file_size = 2; 
  repeated PacketFragmentMapping fragments = 3;
  // file_root is the Merkle root of fragments in this file
  string file_root = 4;
}

// ManifestPacket defines the structure of the website/project
message ManifestPacket {
  string project_name = 1;
  string version      = 2;
  
  // 修正点: mapはGogoProtoとCosmos SDKのPulsarリフレクションで互換性がないため、
  // 独自のEntry構造体を使用したrepeatedに変更します。
  repeated ManifestFileEntry files = 3 [(gogoproto.nullable) = false];

  // CSU verification fields
  string root_proof = 4;
  uint64 fragment_size = 5;
  // identity fields
  string owner = 6;
  string session_id = 7;
}

// ManifestFileEntry は map<string, FileMetadata> の代替となるエントリ構造体です
message ManifestFileEntry {
  string path = 1;
  FileMetadata metadata = 2 [(gogoproto.nullable) = false];
}